--- a/cliques.html
+++ b/cliques.html
@@ -1,9 +1,25 @@
 <head>
 
+
+ configuracoes 
 </head>
+
 <body>
+
+    <p>
+        
+    </p>
+
     <h1>
         
     </h1>
+
+    <h2>
+
+    </h2>
+
+    <h3>
+
+    </h3>
 
 </body>
