--- a/index.html
+++ b/index.html
@@ -1,9 +1,82 @@
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Academia FitPro</title>
+    <link rel="stylesheet" href="style.css"> <!-- Aqui você pode linkar seu arquivo CSS -->
 </head>
 <body>
-    <h1>
-        
-    </h1>
+     
+
+    <!-- Seção de Cabeçalho -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#planos">Planos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Seção de Introdução -->
+    <section id="home" class="hero">
+        <h1>Bem-vindo à Academia FitPro</h1>
+        <p>Transforme seu corpo com treinos personalizados e acompanhamento de especialistas!</p>
+        <a href="#planos" class="btn">Veja nossos planos</a>
+    </section>
+
+    <!-- Seção Sobre a Academia -->
+    <section id="sobre">
+        <h2>Sobre a Academia</h2>
+        <p>A FitPro é uma academia moderna, com equipamentos de última geração e profissionais qualificados para te ajudar a atingir seus objetivos de saúde e fitness.</p>
+    </section>
+
+    <!-- Seção de Planos de Treino -->
+    <section id="planos">
+        <h2>Planos de Treino</h2>
+        <div class="planos">
+            <div class="plano">
+                <h3>Plano Básico</h3>
+                <p>Inclui acesso à academia e acompanhamento semanal.</p>
+                <button>Saiba mais</button>
+            </div>
+            <div class="plano">
+                <h3>Plano Avançado</h3>
+                <p>Acesso completo à academia, treinos personalizados e aulas de grupo.</p>
+                <button>Saiba mais</button>
+            </div>
+            <div class="plano">
+                <h3>Plano Premium</h3>
+                <p>Acesso completo + consultoria nutricional e personal trainer.</p>
+                <button>Saiba mais</button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção de Contato -->
+    <section id="contato">
+        <h2>Entre em Contato</h2>
+        <form>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="mensagem">Mensagem:</label>
+            <textarea id="mensagem" name="mensagem" required></textarea>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>&copy; 2025 Academia FitPro - Todos os direitos reservados</p>
+    </footer>
 
 </body>
+</html>
