--- a/tamplate.html
+++ b/tamplate.html
@@ -1,10 +1,35 @@
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <p></p>
+    
+</body>
+</html>
+<head>
+
+
+ configuracoes 
+</head>
+
+<body>
+
+    <p>
+
+    </p>
+
     <h1>
         
     </h1>
+
+    <h2>
+
+    </h2>
+
+    <h3>
+
+    </h3>
 
 </body>
